--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,8 @@
     <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
+    <!-- Ng-Map https://github.com/allenhwkim/angularjs-google-maps -->
+    <script src="/bower_components/ngmap/build/scripts/ng-map.js"></script>
 
     <!--APP libraries & components-->
     <script src="main.js" ></script>
@@ -82,6 +84,7 @@
     <!--<script src="controllers/contatoController.js" ></script>-->
     <script src="components/shared/services/authenticationService.js" ></script>
     <script src="components/shared/services/profileService.js" ></script>
+    <script src="components/shared/services/mapsService.js" ></script>
     <!-- <script src="components/shared/services/alertService.js" ></script> -->
 
     <script src="components/shared/directives/dtAlertDirective.js" ></script>
